@@ -1,3 +1,4 @@
+* Cancel account move when stock move is cancelled
 
 Version 7.2.0 - 2024-04-29
 --------------------------
